<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:fitsSystemWindows="true"
    android:layout_height="match_parent"
    tools:context=".NextFiveDayActivity">
    <ImageView
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:src="@drawable/back"
        android:layout_marginStart="24dp"
        android:layout_marginTop="15dp"
        android:id="@+id/back"/>
<LinearLayout
    android:layout_marginTop="25dp"
    android:layout_below="@+id/back"
    android:id="@+id/day_show_layout"
    android:layout_width="match_parent"
    android:layout_height="80dp"
    android:weightSum="5"
    android:orientation="horizontal">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/today"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:fontFamily="@font/roboto"
            android:id="@+id/txt1"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tmr"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:fontFamily="@font/roboto"
            android:id="@+id/txt2"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_day"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:fontFamily="@font/roboto"
            android:id="@+id/txt3"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_day"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:fontFamily="@font/roboto"
            android:id="@+id/txt4"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next_day"
            android:textStyle="bold"
            android:gravity="center"/>
        <TextView
            android:fontFamily="@font/roboto"
            android:layout_marginTop="10sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txt5"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
    <com.testing.myweather.chartview
        android:layout_below="@+id/day_show_layout"
        android:id="@+id/line_char"
        android:layout_width="match_parent"
        android:layout_height="300dp" />
</RelativeLayout>