<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:fitsSystemWindows="false"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:fitsSystemWindows="false"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsingToolbarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

         <RelativeLayout
             android:id="@+id/main_bg"
             android:layout_width="match_parent"
             android:layout_height="400dp">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/next_day"
                 android:textStyle="italic"
                 android:id="@+id/show_day"
                 android:layout_marginStart="10dp"
                 android:layout_marginTop="50dp"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/next_day"
                 android:textStyle="italic"
                 android:id="@+id/show_date"
                 android:layout_marginEnd="10dp"
                 android:layout_alignParentEnd="true"
                 android:layout_centerHorizontal="true"
                 android:layout_marginTop="50dp"
                 tools:ignore="RelativeOverlap" />
             <TextView
                 android:id="@+id/temperature"
                 android:fontFamily="@font/roboto"
                 android:layout_width="wrap_content"
                 android:layout_height="100dp"
                 android:layout_marginTop="20dp"
                 android:layout_below="@+id/show_date"
                 android:layout_centerHorizontal="true"
                 android:textSize="70sp" />
             <TextView
                 android:layout_toEndOf="@id/temperature"
                 android:id="@+id/temperature_symbol"
                 android:layout_width="wrap_content"
                 android:layout_height="50dp"
                 android:layout_below="@+id/show_date"
                 android:layout_marginTop="20dp"
                 android:layout_centerHorizontal="true"
                 android:textSize="30sp" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="25sp"
                 android:fontFamily="@font/roboto"
                 android:id="@+id/weather_info"
                 android:layout_below="@id/temperature"
                 android:layout_centerHorizontal="true"/>
             <Button
                 android:layout_marginBottom="36dp"
                 android:layout_alignParentBottom="true"
                 android:layout_marginTop="20sp"
                 android:layout_centerHorizontal="true"
                 android:layout_width="match_parent"
                 android:layout_marginStart="26dp"
                 android:layout_marginEnd="26dp"
                 android:layout_height="wrap_content"
                 android:text="@string/next_five_days"
                 android:paddingTop="10dp"
                 android:paddingBottom="10dp"
                 android:paddingStart="25dp"
                 android:paddingEnd="25dp"
                 android:textAllCaps="false"
                 android:fontFamily="@font/roboto"
                 android:background="@drawable/buttonbg"
                 android:id="@+id/nextfiveday"/>

         </RelativeLayout>

            <androidx.appcompat.widget.Toolbar
                android:paddingTop="30dp"
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_collapseMode="pin"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                android:gravity="center">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">
                    <TextView
                        android:fontFamily="@font/roboto"
                        android:id="@+id/toolbar_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_anchorGravity="start|center"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:id="@+id/bg"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RelativeLayout
            android:id="@+id/curve"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:background="@drawable/layoutbg"
            app:layout_constraintBottom_toBottomOf="@+id/bg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_editor_absoluteX="25dp"
            app:layout_editor_absoluteY="25dp" />
        <androidx.core.widget.NestedScrollView
            android:layout_marginTop="30dp"
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/curve"
            >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/sun_show"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:orientation="horizontal"
                android:weightSum="2">
                <androidx.cardview.widget.CardView
                    android:layout_marginStart="15dp"
                    android:layout_marginEnd="40dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp">
                    <LinearLayout
                        android:background="#39A89C9C"
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:textSize="18sp"
                            android:fontFamily="@font/roboto"
                            android:layout_marginTop="70dp"
                            android:text="@string/sun_raise_time"/>
                        <TextView
                            android:textSize="20sp"
                            android:fontFamily="@font/roboto"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="25dp"
                            android:gravity="center"
                            android:id="@+id/sun_raise_time"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="15dp"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    app:cardCornerRadius="10dp"
                    >
                <LinearLayout
                android:background="#39A89C9C"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <TextView
                        android:textSize="18sp"
                        android:fontFamily="@font/roboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:layout_marginTop="70dp"
                        android:text="@string/sun_set_time"/>
                    <TextView
                        android:textSize="20sp"
                        android:fontFamily="@font/roboto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="25dp"
                        android:gravity="center"
                        android:id="@+id/sun_set_time"/>
                </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/more_five_day_recyclerview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/sun_show" />
        </RelativeLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.coordinatorlayout.widget.CoordinatorLayout>
